--- a/src/components/PostListItem/style.css
+++ b/src/components/PostListItem/style.css
@@ -1,5 +1,5 @@
-.post-detail{
+.post-list{
     background-color: white;
     margin-top: 10%;
-    margin-bottom: 10%; 
+    margin-bottom: 10%;
 }
